# AlGear

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: railway-deploy.yml
aigear/: __init__.py  dataset.py  features.py  plots.py
aigear/modeling/: predict.py  train.py
algear/: __init__.py  config.py  core.py  dataset.py  evaluate.py  features.py  metrics.py  pipeline_config.py  plots.py  tracker.py  visualize.py  zones.py
algear/api/: __init__.py  __main__.py  app.py  dependencies.py  inference.py  schemas.py  utils.py
algear/modeling/: oversample.py  pipeline.py  predict.py  train.py
docs/: baseline-training-report.md  oversampling-10x-report.md  oversampling-conservative-report.md  pipeline-docs.md  resplit-oversampling-report.md
models/baseline/: args.yaml
notebooks/: 1.0-alg-data-loading-and-exploration.ipynb  2.0-alg-baseline-training.ipynb  2.1-alg-oversampling.ipynb  2.2-alg-oversampling-conservative.ipynb  2_0_alg_baseline_training.ipynb  3.0-alg-dataset-resplit.ipynb  3.1-alg-resplit-oversampling.ipynb  4.0-alg-pipeline-metrics.ipynb  4.1-alg-core-pipeline-demo.ipynb
