[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "algear"
version = "0.1.0"
description = "Real-time PPE compliance monitoring system powered by computer vision."
authors = [
  { name = "AlGear Team" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.ruff]
line-length = 99
src = ["algear"]
include = ["pyproject.toml", "algear/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["algear"]
force-sort-within-sections = true
